
"BasicStrings_deleteTodo" = "Delete todo";
