...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .systemBackground
        
        title = "Todos"
        navigationController?.navigationBar.prefersLargeTitles = true
        
        
        setupContentArea()
        setupTableView()
        
...
